[gd_scene load_steps=2 format=3 uid="uid://daoao5f5x4r5d"]

[ext_resource type="Script" path="res://Components/DestroyButton/DestroyButton.gd" id="1_qe7d4"]

[node name="DestroyButton" type="Area2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource("1_qe7d4")

[node name="DestroyProgress" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
